--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "This is the app that I used to learned about React-Native"
   }
 }
